# CheeTaxi

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: accessibility-audit.yml  ci.yml  security-scan.yml
apps/api/: Dockerfile  jest.config.js  jest.e2e.config.js  jest.integration.config.js  package.json  tsconfig.json
apps/mobile-driver/: l10n.yaml  pubspec.yaml
apps/mobile-passenger/: pubspec.yaml
apps/web-admin/: Dockerfile  next.config.js  package.json  tailwind.config.js  vercel.json
apps/web-corporate/: Dockerfile  package.json  tailwind.config.js  vercel.json
apps/web-dispatcher/: Dockerfile  next.config.js  package.json  vercel.json
apps/web-landing/: Dockerfile  lighthouserc.json  next.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
docs/: API.md  ARCHITECTURE.md  BACKUP_STRATEGY.md  BRAND_GUIDELINES.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INCIDENT_RESPONSE.md  KNOWN_LIMITATIONS.md  LAUNCH_CHECKLIST.md  LICENSE.md  OPERATIONS_MANUAL.md  PERFORMANCE_REPORT.md  PRD.md  QUICK_START.md  README.md  RELEASE_NOTES.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  TESTING_REPORT.md
infra/kubernetes/: production.yaml
infra/terraform/: main.tf  multi-region.tf  multi-region.tfvars  production.tfvars
sdks/python/: README.md  pyproject.toml
sdks/python/cheetaxi/: __init__.py  client.py  resources.py
(+247 files in other folders)
